--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,21 @@ buildscript {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
     }
 }
+
+repositories {
+    maven {
+        name 'Progs Maven'
+        url "http://dvs1.progwml6.com/files/maven"
+    }
+}
+
 apply plugin: 'net.minecraftforge.gradle.forge'
+
+dependencies {
+    println("Adding dependencies...")
+    deobfCompile "mezz.jei:jei_1.9:3.0.3.166"
+    println("Added!")
+}
 
 /*
 // for people who want stable - not yet functional for MC 1.8.8 - we require the forgegradle 2.1 snapshot
@@ -22,12 +36,13 @@ plugins {
 */
 version = "0.0.0+1.9"
 group= "com.desutine.kismet" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "kismet"
+archivesBaseName = "Kismet"
 
 minecraft {
-    version = "1.9-12.16.0.1767-1.9"
+    version = "1.9-12.16.0.1776-1.9"
     runDir = "run"
-    
+    useDepAts = true
+
     // the mappings can be changed at any time, and must be in the following format.
     // snapshot_YYYYMMDD   snapshot are built nightly.
     // stable_#            stables are built at the discretion of the MCP team.
