--- a/build.gradle
+++ b/build.gradle
@@ -28,12 +28,12 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
-version = "1.9-0.0.5.0"
+version = "1.9-0.0.6.0"
 group= "desutine.kismet" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "Kismet"
 
 minecraft {
-    version = "1.9-12.16.0.1832-1.9"
+    version = "1.9-12.16.0.1863-1.9"
     runDir = "run"
     useDepAts = true
 
@@ -68,7 +68,8 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
-    deobfCompile "mezz.jei:jei_1.9:3.2.4.177"
+    deobfCompile "mezz.jei:jei_1.9:3.2.10.185"
+//    deobfProvided "mezz.jei:jei_1.9:3.2.9.184"
 }
 
 processResources
