Okay this is the LAST time I change config Removed outright the hidden configs to in-game ones (for API support mayhaps? .u.) Added hardcoded trading (uniques only for now), shearing Added procedual fishing, mob loot (both last separated from loot_tables) Renamed a few stuff

--- a/src/main/resources/kismet_at.cfg
+++ b/src/main/resources/kismet_at.cfg
@@ -13,3 +13,37 @@ public net.minecraft.block.BlockRedstoneOre func_180643_i(Lnet/minecraft/block/s
 public net.minecraft.block.BlockRotatedPillar func_180643_i(Lnet/minecraft/block/state/IBlockState;)Lnet/minecraft/item/ItemStack;
 public net.minecraft.block.BlockSilverfish func_180643_i(Lnet/minecraft/block/state/IBlockState;)Lnet/minecraft/item/ItemStack;
 
+# getLootTable
+# public net.minecraft.entity.EntityLiving func_184647_J()Lnet/minecraft/util/ResourceLocation;
+
+# getLootTable on subclasses
+# public net.minecraft.entity.monster.EntityBlaze func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntityCaveSpider func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntityCreeper func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntityEnderman func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntityEndermite func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntityGhast func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntityGiantZombie func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntityGuardian func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntityIronGolem func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntityMagmaCube func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntityPigZombie func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntityShulker func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntitySilverfish func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntitySkeleton func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntitySlime func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntitySnowman func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntitySpider func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntityWitch func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.monster.EntityZombie func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.passive.EntityBat func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.passive.EntityChicken func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.passive.EntityCow func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.passive.EntityHorse func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.passive.EntityMooshroom func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.passive.EntityOcelot func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.passive.EntityPig func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.passive.EntityRabbit func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.passive.EntitySheep func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.passive.EntitySquid func_184647_J()Lnet/minecraft/util/ResourceLocation;
+# public net.minecraft.entity.passive.EntityWolf func_184647_J()Lnet/minecraft/util/ResourceLocation;
